# LLVM-OpenCL

./: run.sh
apps/: analysis.sh
apps/BFS/: SWI+C.cl  WGArgs.out  baseline.ll
apps/CEDD/: KKC.out  MemAcc.out  NumKernels.out  WGArgs.out  baseline.ll  baseline_2.ll
apps/HSTI/: SWI+C.cl  SWI.ll  baseline.ll
apps/KM/: baseline.ll
apps/MM/: baseline.ll  main.bc  main.cpp  main.ll
apps/MS/: baseline.ll
apps/PAD/: baseline.ll
apps/PS/: NumKernels.out  WGArgs.out  (+4 more)
code/: readme.txt
llvm-project/llvm/lib/Transforms/: CMakeLists.txt
llvm-project/llvm/lib/Transforms/Atomic/: Atomic.cpp  CMakeLists.txt
llvm-project/llvm/lib/Transforms/DelKernel/: CMakeLists.txt  DelKernel.cpp
llvm-project/llvm/lib/Transforms/ExecModel/: ExecModel.cpp
llvm-project/llvm/lib/Transforms/FindAO/: CMakeLists.txt  FindAO.cpp
llvm-project/llvm/lib/Transforms/Hello/: CMakeLists.txt
llvm-project/llvm/lib/Transforms/InOut/: CMakeLists.txt  InOut.cpp
llvm-project/llvm/lib/Transforms/KKC/: CMakeLists.txt  KKC.cpp
llvm-project/llvm/lib/Transforms/MPS/: CMakeLists.txt  MPS.cpp
llvm-project/llvm/lib/Transforms/MemAcc/: CMakeLists.txt  MemAcc.cpp
llvm-project/llvm/lib/Transforms/MyHello/: MyHello.cpp
llvm-project/llvm/lib/Transforms/NumKernel/: CMakeLists.txt  NumKernel.cpp
llvm-project/llvm/lib/Transforms/NumKernels/: CMakeLists.txt  NumKernels.cpp
llvm-project/llvm/lib/Transforms/SameBuf/: CMakeLists.txt  SameBuf.cpp
llvm-project/llvm/lib/Transforms/SameBuffer/: CMakeLists.txt  SameBuffer.cpp
llvm-project/llvm/lib/Transforms/WGArgs/: CMakeLists.txt  WGArgs.cpp
(+29 files in other folders)
