add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(Hello)
add_subdirectory(MyHello)
add_subdirectory(Atomic)
add_subdirectory(NumKernels)
add_subdirectory(SameBuffer)
add_subdirectory(InOut)
add_subdirectory(KKC)
add_subdirectory(WGArgs)
add_subdirectory(MPS)
