add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(Hello)
add_subdirectory(MyHello)
add_subdirectory(FindAO)
add_subdirectory(NumKernel)
add_subdirectory(SameBuf)
add_subdirectory(InOut)
add_subdirectory(MemAcc)
add_subdirectory(WGArgs)
add_subdirectory(DelKernel)
add_subdirectory(ExecModel)
